
name:                constellation
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Andrew Rademacher
maintainer:          andrewrademacher@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
    hs-source-dirs:     src
    default-language:   Haskell2010

    --exposed-modules:

    build-depends:      base                >=4.7   && <4.8

executable wai
    main-is:            Main.hs
    hs-source-dirs:     wai
    default-language:   Haskell2010

    build-depends:      base                >=4.7   && <4.8

                    ,   constellation

test-suite tests
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test
    default-language:   Haskell2010

    build-depends:      base                >=4.7   && <4.8
                    ,   tasty               >=0.10  && <0.11
                    ,   tasty-quickcheck    >=0.8   && <0.9
                    ,   tasty-hunit         >=0.9   && <0.10
                    ,   tasty-th            >=0.1   && <0.2

                    ,   constellation
