
name:                constellation
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Andrew Rademacher
maintainer:          andrewrademacher@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
    hs-source-dirs:     src
    default-language:   Haskell2010

    exposed-modules:    Constellation.Api.System.Internal
                    ,   Constellation.Api.System
                    ,   Constellation.Api
                    ,   Constellation.Types

    build-depends:      base                >=4.7   && <4.8
                    ,   rest-core           >=0.34  && <0.35
                    ,   transformers-base   >=0.4   && <0.5
                    ,   mtl                 >=2.1   && <2.2
                    ,   monad-logger        >=0.3   && <0.4
                    ,   resourcet           >=1.1   && <1.2
                    ,   transformers        >=0.3   && <0.4
                    ,   aeson               >=0.8   && <0.9
                    ,   json-schema         >=0.7   && <0.8
                    ,   time                >=1.4   && <1.5

executable wai
    main-is:            Main.hs
    hs-source-dirs:     wai
    default-language:   Haskell2010

    build-depends:      base                >=4.7   && <4.8
                    ,   warp                >=3.0   && <3.1
                    ,   rest-wai            >=0.1   && <0.2

                    ,   constellation

test-suite tests
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test
    default-language:   Haskell2010

    build-depends:      base                >=4.7   && <4.8
                    ,   tasty               >=0.10  && <0.11
                    ,   tasty-quickcheck    >=0.8   && <0.9
                    ,   tasty-hunit         >=0.9   && <0.10
                    ,   tasty-th            >=0.1   && <0.2

                    ,   constellation
